removed api key

--- a/flask/Flask_Google_Maps_Implementation/templates/home.html
+++ b/flask/Flask_Google_Maps_Implementation/templates/home.html
@@ -12,7 +12,7 @@
             loading="lazy"
             allowfullscreen
             referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD1kdqSjfK8r-VppX7Kw2TlOiyVHSCnhLs&q=Dublin,Ireland">
+            src="https://www.google.com/maps/embed/v1/place?key=&q=Dublin,Ireland">
         </iframe>
     </body>
 </html>
