--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -1,18 +1,82 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home Page</title>
+    <title>Home</title>
+    <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Home Page!</h1>
-    <p>Here is some text</p>
-    {% for x in range(10) %} {% if x %2 ==1 %}
-    <p>{{x}} is odd</p>
-    {% else %}
-    <p>{{x}} is even</p>
-    {% endif %} {% endfor %} {% for y in content%}
-    <p>{{y}}</p>
-    {% endfor %}
-    <p>Here is some more text</p>
+    <iframe
+      width="600"
+      height="450"
+      style="border: 0"
+      loading="lazy"
+      allowfullscreen
+      referrerpolicy="no-referrer-when-downgrade"
+      src="https://www.google.com/maps/embed/v1/place?key=&q=Dublin,Ireland"
+    >
+    </iframe>
+    <ul>
+      {% for row in data %}
+      <li>{{ row[1] }} ({{ row[2] }}, {{ row[3] }})</li>
+      {% endfor %}
+    </ul>
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home</title>
+    <meta charset="utf-8" />
+    <style>
+      #map {
+        height: 100%;
+      }
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        // Create the map centered on Dublin, Ireland
+        var map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 53.3498053, lng: -6.2603097 },
+          zoom: 13,
+        });
+
+        // Retrieve the data from the Flask app
+        var data = JSON.parse("{{ data | tojson | safe }}");
+
+        // Add markers to the map for each station
+        for (var i = 0; i < data.length; i++) {
+          var marker = new google.maps.Marker({
+            position: { lat: data[i][3], lng: data[i][4] },
+            map: map,
+            title: data[i][1],
+          });
+        }
+
+        // Add markers for each location
+        //{% for row in data %}
+        //var location = { lat: {{ row[3] }}, lng: {{ row[4] }} };
+        //var marker = new google.maps.Marker({
+        //  position: location,
+        //  map: map,
+        //  title: "{{ row[1] }}",
+        //});
+        //{% endfor %}
+      }
+    </script>
+    <script
+      src="https://www.google.com/maps/embed/v1/place?key=&q=Dublin,Ireland"
+      async
+      defer
+    ></script>
   </body>
 </html>
