--- a/flask/Flask_DM/templates/index_print_tests.html
+++ b/flask/Flask_DM/templates/index_print_tests.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="=en" dir="ltr">
+<html>
   <head>
+    <title>Home</title>
     <meta charset="utf-8" />
-    <title>Map</title>
   </head>
   <body>
     <iframe
@@ -15,5 +15,10 @@
       src="https://www.google.com/maps/embed/v1/place?key=&q=Dublin,Ireland"
     >
     </iframe>
+    <ul>
+      {% for row in data %}
+      <li>{{ row[1] }} ({{ row[2] }}, {{ row[3] }})</li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
