Removed API KEY

--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -47,7 +47,7 @@
       }
     </script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1kdqSjfK8r-VppX7Kw2TlOiyVHSCnhLs&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
       async
       defer
     ></script>
