--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Home</title>
-    <meta charset="utf-8" />
-    <style>
-      /* Set the height of the map */
-      #map {
-        height: 400px;
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dublin Bikes Stations</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      function loadMapScript() {
+        var script = document.createElement('script');
+        script.src = 'https://maps.googleapis.com/maps/api/js?key=API_KEY_HERE&callback=initMap';
+        script.async = true;
+        script.defer = true;
+        document.body.appendChild(script);
       }
+
+      window.onload = loadMapScript;
+</script>
+    <style>
+        #map {
+            height: 400px;
+            width: 100%;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
+    <h1>Dublin Bikes Stations</h1>
     <div id="map"></div>
     <script>
-      function initMap() {
-        // Create a new map centered on Dublin
-        var map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 53.3498, lng: -6.2603 },
-          zoom: 13,
-        });
-
-        // Define the markers array
-        var markers = [];
-        const infoWindow = new google.maps.InfoWindow();
-        // Loop through the data passed from Flask and add a marker for each location
-        {% for row in data %}
-          marker = new google.maps.Marker({
-          position: { lat: {{ row[2] }}, lng: {{ row[3] }} },
-          map: map,
-          title: "{{ row[1] }}"
-        });
-
-        
-        markers.push(marker);
-        {% endfor %}
-
-        markers.forEach(marker => {
-        marker.addListener("click", ({ domEvent, latLng }) => {
-        const { target } = domEvent;
-
-        infoWindow.close();
-        infoWindow.setContent(marker.title);
-        infoWindow.open(marker.map, marker);
-    });
-        });
-      }
+        const bikeData = {{ bike_data|tojson }};
     </script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
-      async
-      defer
-    ></script>
-  </body>
+<script src="{{ url_for('static', filename='main.js') }}"></script>
+</body>
 </html>
