Updated main.py and main.js to resolve map/info loading times and correct info windows.

--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -8,7 +8,7 @@
     <script>
       function loadMapScript() {
         var script = document.createElement('script');
-        script.src = 'https://maps.googleapis.com/maps/api/js?key=API_KEY_HERE&callback=initMap';
+        script.src = 'https://maps.googleapis.com/maps/api/js?key=INSERTKEYHERE&callback=initMap';
         script.async = true;
         script.defer = true;
         document.body.appendChild(script);
