Provisionally completed -  main.py, main.js and index.html now populating average charts for all asks - x2 features.

--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -21,8 +21,13 @@
     <canvas id="dayBeforeYesterdayChart"></canvas>
 </div>
 
+<div id="average-chart-container" style="display:none;">
+    <canvas id="averageTodayChart"></canvas>
+</div>
+
+
     <!-- Map and API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=INSERTAPIKEY&callback=fetchData" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=INSERTKEYHERE&callback=fetchData" async defer></script>
     <script src="/static/main.js"></script>
 
     <!-- Optional JavaScript -->
