--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -16,6 +16,7 @@
 <div id="map" style="height: 500px; width: 100%;"></div>
 <input id="autocompleteStart" placeholder="Enter a place" type="text" />   
 <input id="autocompleteEnd" placeholder="Enter a place" type="text" />
+<button onclick="findClosestStationEnd()">Test</button>
 <div id="chart-container" style="display:none;">
     <canvas id="todayChart"></canvas>
     <canvas id="yesterdayChart"></canvas>
@@ -28,7 +29,7 @@
 
 
     <!-- Map and API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1kdqSjfK8r-VppX7Kw2TlOiyVHSCnhLs&libraries=places&callback=fetchData" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1kdqSjfK8r-VppX7Kw2TlOiyVHSCnhLs&libraries=places,geometry&callback=fetchData" async defer></script>
     <script src="/static/main.js"></script>
 
     <!-- Optional JavaScript -->
