MultiMode travel directions

--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -16,7 +16,7 @@
 <div id="map" style="height: 500px; width: 100%;"></div>
 <input id="autocompleteStart" placeholder="Enter a place" type="text" />   
 <input id="autocompleteEnd" placeholder="Enter a place" type="text" />
-<button onclick="findClosestStationEnd()">Test</button>
+<button onclick="showRoute()">Test</button>
 <div id="chart-container" style="display:none;">
     <canvas id="todayChart"></canvas>
     <canvas id="yesterdayChart"></canvas>
