--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
+<!doctype html>
 <html lang="en">
+
 
 <head>
     <!-- Required meta tags -->
@@ -9,18 +11,22 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <title>Dublin Bikes</title>
     <title>Dublin Bikes</title>
 </head>
 <body>
 <div id="map" style="height: 500px; width: 100%;"></div>
-<<<<<<< HEAD
-
-=======
 <input id="autocompleteStart" placeholder="Enter a place" type="text" />   
 <input id="autocompleteEnd" placeholder="Enter a place" type="text" />
 <button onclick="showRoute()">Test</button>
->>>>>>> cdda415b1fecba63c7d065837e1ec45582694ddc
 <div id="chart-container" style="display:none;">
     <canvas id="todayChart"></canvas>
     <canvas id="yesterdayChart"></canvas>
@@ -33,32 +39,22 @@
 
 
     <!-- Map and API -->
-<<<<<<< HEAD
     <script src="https://maps.googleapis.com/maps/api/js?key=INSERTAPIKEYHERE&callback=fetchData" async defer></script>
-=======
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1kdqSjfK8r-VppX7Kw2TlOiyVHSCnhLs&libraries=places,geometry,routes&callback=fetchData" async defer></script>
->>>>>>> cdda415b1fecba63c7d065837e1ec45582694ddc
     <script src="/static/main.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<<<<<<< HEAD
 <!--integrity is a security feature that allows the browser to ensure that the file being loaded has not been tampered with. SHA codes aren't sensitive info so we can leave these in github uploads.  crossorigin attribute indicates that the file is being loaded from another domain-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" crossorigin="anonymous"></script>
-=======
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" crossorigin="anonymous"></script>
->>>>>>> cdda415b1fecba63c7d065837e1ec45582694ddc
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
         integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
         crossorigin="anonymous"></script>
 
-</body>
 
+
+</body>
 </html>
