Added weather functionality

--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -151,10 +151,18 @@ margin-top: 135px;
 }
 
 .weather-container{
+    padding-top: 0px;
     padding-right: 20px;
     float:right;
 }
 
+#weather{
+    position: absolute;
+    top: 510px;
+    right: 50px;
+    height: 150px;
+    width: 150px;
+}
 </style>
 
 
@@ -175,7 +183,7 @@ margin-top: 135px;
         <label for="toggle-switch" class="toggle-label"></label>
     </div>
     <div class="weather-container">
-        <img id = 'weather' src="/Rain.png">
+        <img id="weather" src="">
     </div>
 </div>
 
