--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -175,11 +175,15 @@ margin-top: 135px;
         <input id="autocompleteStart" placeholder="Enter a place" type="text" /><br>
         <input id="autocompleteEnd" placeholder="Enter a place" type="text" />
         <input type='button' value="Get Route" id='route' onclick="showRoute()"/>
-        <input type="date" id="toggle-date" name="date">
+        <form method="POST" action="/process_date">
+            <input type="date" id="toggle-date" name="date">
+        </form>
     </div>
     <div class="toggle-container">
+        
         <label id="labelText">Select Date</label>
-        <input type="checkbox" id="toggle-switch" name="toggle-switch" class="toggle-checkbox" onchange="handleDate()">
+        <input type="checkbox" id="toggle-switch" name="toggle-switch" class="toggle-checkbox" onchange= 'handleDate()'>
+
         <label for="toggle-switch" class="toggle-label"></label>
     </div>
     <div class="weather-container">
