--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -19,6 +19,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <title>Dublin Bikes</title>
     <title>Dublin Bikes</title>
 
@@ -174,8 +176,8 @@ margin-top: 135px;
     <div class="input-container">
         <input id="autocompleteStart" placeholder="Enter a place" type="text" /><br>
         <input id="autocompleteEnd" placeholder="Enter a place" type="text" />
-        <input type='button' value="Get Route" id='route' onclick="showRoute()"/>
-        <form method="POST" action="/process_date">
+        <input type='button' value="Get Route" id='route' onclick="routePlanning()"/>
+        <form>
             <input type="date" id="toggle-date" name="date">
         </form>
     </div>
