ML Route Planning in Place

--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -176,7 +176,7 @@ margin-top: 135px;
     <div class="input-container">
         <input id="autocompleteStart" placeholder="Enter a place" type="text" /><br>
         <input id="autocompleteEnd" placeholder="Enter a place" type="text" />
-        <input type='button' value="Get Route" id='route' onclick="routePlanning()"/>
+        <input type='button' value="Get Route" id='route' onclick="showRoute()"/>
         <form>
             <input type="date" id="toggle-date" name="date">
         </form>
