--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -57,8 +57,6 @@
 
       .weatherbar {
         float: left;
-        margin: 0;
-        padding: 0
       }
 
       p {
@@ -70,7 +68,9 @@
       .map-container {
         display: flex;
         direction: column;
+        justify-content: center;
         align-items: center;
+        margin: auto;
       }
       
       input {
@@ -79,6 +79,7 @@
 
       #route {
         float: right;
+        color: #6f6fec;
       }
 
       .input-container {
@@ -227,7 +228,7 @@
     </div>
 
     <div class="map-container">
-    <div id="map" style="height: 500px; width: 100%"></div>
+    <div id="map" style="height: 500px; width: 99%;"></div>
     </div>
 
     <div class="info-container">
@@ -299,3 +300,4 @@
     ></script>
   </body>
 </html>
+
