--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -37,6 +37,41 @@
     <title>Dublin Bikes</title>
 
     <style>
+      body {
+        background-image: linear-gradient(to bottom right, #0000ff, #ccccff);
+      }
+
+      .header-container {
+        height: 50px;
+        padding: 10px;
+      }
+
+      h1 {
+        color: white;
+        font-size: 24px;
+        margin: 0;
+        padding: 0;
+        float: right;
+      }
+
+      .weatherbar {
+        float: left;
+      }
+
+      p {
+        display: inline-block;
+        color: white;
+        margin-right: 10px;
+      }
+
+      .map-container {
+        display: flex;
+        direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+      }
+
       input {
         float: right;
       }
@@ -176,7 +211,20 @@
     </style>
   </head>
   <body>
-    <div id="map" style="height: 500px; width: 100%"></div>
+    <div class="header-container">
+      <div class="weatherbar">
+        <p id="Temp"></p>
+        <p id="WindSpeed"></p>
+      </div>
+      <div class="weather-container">
+        <img id="weather" src="" />
+      </div>
+      <h1>Dublin Bike App</h1>
+    </div>
+
+    <div class="map-container">
+      <div id="map" style="height: 500px; width: 99%"></div>
+    </div>
 
     <div class="info-container">
       <div class="input-container">
