--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -38,12 +38,13 @@
 
     <style>
       body {
-        background-image: linear-gradient(to bottom right, #0000ff, #ccccff);
+        background-image: linear-gradient(to bottom right, #5050fa, #ccccff);
       }
-
+      
       .header-container {
         height: 50px;
         padding: 10px;
+
       }
 
       h1 {
@@ -71,13 +72,14 @@
         align-items: center;
         margin: auto;
       }
-
+      
       input {
         float: right;
       }
 
       #route {
         float: right;
+        color: #6f6fec;
       }
 
       .input-container {
@@ -109,7 +111,7 @@
       }
 
       .input-container input[type="button"]:hover {
-        background-color: #095c1e;
+        background-color: #0d1025;
       }
 
       .input-container input:first-child {
@@ -146,6 +148,7 @@
         width: 60px;
         height: 34px;
         margin-top: 10px;
+        margin-bottom: 10px;
       }
 
       .toggle-label {
@@ -176,7 +179,7 @@
       }
 
       .toggle-checkbox:checked + .toggle-label {
-        background-color: #6ab04c;
+        background-color: #0d1025;
       }
 
       .toggle-checkbox:checked + .toggle-label:after {
@@ -188,6 +191,7 @@
         padding-left: 80px;
         font-size: large;
         white-space: nowrap;
+        color: white;
       }
 
       #toggle-date {
@@ -196,17 +200,31 @@
       }
 
       .weather-container {
-        padding-top: 0px;
-        padding-right: 20px;
-        float: right;
+        display: inline-block;
+        position: absolute;
+        left:10px;
       }
 
+
+
       #weather {
+        height: 50px;
+        width: 50px;
+        vertical-align: middle;
+      }
+
+      #todayChart, #yesterdayChart, #dayBeforeYesterdayChart, #averageTodayChart {
+        color: white;
+      }
+
+      .weatherbar #Temp{
         position: absolute;
-        top: 510px;
-        right: 50px;
-        height: 150px;
-        width: 150px;
+        left:80px;
+      }
+
+      .weatherbar #WindSpeed{
+        position: absolute;
+        left: 300px;
       }
     </style>
   </head>
@@ -223,7 +241,7 @@
     </div>
 
     <div class="map-container">
-      <div id="map" style="height: 500px; width: 99%"></div>
+    <div id="map" style="height: 500px; width: 99%;"></div>
     </div>
 
     <div class="info-container">
@@ -254,9 +272,6 @@
           onchange="handleDate()"
         />
         <label for="toggle-switch" class="toggle-label"></label>
-      </div>
-      <div class="weather-container">
-        <img id="weather" src="" />
       </div>
     </div>
 
