--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -211,6 +211,7 @@
         height: 50px;
         width: 50px;
         vertical-align: middle;
+        padding-bottom: 10px;
       }
 
       #todayChart, #yesterdayChart, #dayBeforeYesterdayChart, #averageTodayChart {
