--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -8,7 +8,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    
+    <!--font import-->
+    <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -39,6 +41,7 @@
     <style>
       body {
         background-image: linear-gradient(to bottom right, #5050fa, #ccccff);
+        font-family: "Century Gothic", century-gothic, sans-serif;
       }
       
       .header-container {
