--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -68,6 +68,10 @@
         margin-right: 10px;
       }
 
+      .info{
+        color: black;
+      }
+
       .map-container {
         display: flex;
         direction: column;
