--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -239,8 +239,12 @@
       .ml {
         display: flex;
         float: right;
-        margin-bottom: 50px;
-        margin-right: 200px;
+        margin-bottom: 100px;
+        margin-right: 50px;
+      }
+
+      #prediction{
+        font-size: 20px;
       }
     </style>
   </head>
