--- a/flask/Flask_DM/templates/index.html
+++ b/flask/Flask_DM/templates/index.html
@@ -295,7 +295,7 @@
         <label for="toggle-switch" class="toggle-label"></label>
       </div>
       <div class="ml">
-        <p id="prediction">Sample text for the machine learning prediction</p>
+        <div id="prediction"></div>
       </div>
     </div>
     
